--- a/VRChat/21/1127321.html
+++ b/VRChat/21/1127321.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "g/5ySlPWDwFv/OCRIxRE1my537dwZ+Xy/peQvXlu61I="></script>
+    "nytUPbe4YO7BgD7TY4Dr6yO+Rz3xSZXOtb/hJXjyyjg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"抱きまくら(100ポリ)","description":"100ポリゴンの抱きまくらです。\nUV展開図が入っています。\nテクスチャは自分で用意してください。\n\n・商用・非商用 利用可\n・改変可\n・再配布禁止","url":"https://booth.pm/ja/items/1127321","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f9645990-9f02-4323-a296-fb5f41046b0b/i/1127321/97e69233-d931-4dc9-ae4a-fb555a09a71a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="g/5ySlPWDwFv/OCRIxRE1my537dwZ+Xy/peQvXlu61I="></script>
+    nonce="nytUPbe4YO7BgD7TY4Dr6yO+Rz3xSZXOtb/hJXjyyjg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1127321/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1127321/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
