--- a/VRChat/46/1127146.html
+++ b/VRChat/46/1127146.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kp4mL5g60uhEMovInW8tIRLintytsQksVFrB4Ygz6Rs="></script>
+    "Ssb/b+AkFSFWijbaAWxloLNn/1x88e/P6qbG65M4fm4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サンタ帽(520ポリゴン)","description":"サンタ帽です。VRChat用で考えています。\nunitypackage内のprefabをシーン上に載せるだけでご使用いただけます。\n\n帽子はDynamic Boneに対応しています。\nDynamic Boneを入れると帽子が揺れます。\n\nVRChat用で考えていますが他の用途にもご使用いただけます。\n\n・商用・非商用 利用可\n・改変可\n・再配布可\n\nライセンスはCC0です。\nご自由にお使いください。","url":"https://booth.pm/ja/items/1127146","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f9645990-9f02-4323-a296-fb5f41046b0b/i/1127146/aa630ff5-64d5-402f-bddc-1553a37e42ae_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kp4mL5g60uhEMovInW8tIRLintytsQksVFrB4Ygz6Rs="></script>
+    nonce="Ssb/b+AkFSFWijbaAWxloLNn/1x88e/P6qbG65M4fm4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1127146/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               115
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1127146/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               115
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
