--- a/VRChat/57/1099957.html
+++ b/VRChat/57/1099957.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bVUkFU12JTtI0KqtWTLRzv9Y0OEaByVDMfiZ2Etd95o="></script>
+    "LBpdCB978kGwSXW2Iqb8sgXuzFzbx1WS484qerhfjlM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRC想定3Dモデル] [アドフリット] Ver2.0 + [リップシンクスカーフ]Ver1.1","description":"主にVRChatでの利用を想定したオリジナル3Dモデルです。\n・人間+メカ+人形を混ぜた様な雰囲気のモデルになっています。","url":"https://booth.pm/ja/items/1099957","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/97c114c0-fba8-44bb-94b5-aaa1efd40633/i/1099957/54cee22a-56ab-43fd-b3c0-5fa5399b1cf8_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bVUkFU12JTtI0KqtWTLRzv9Y0OEaByVDMfiZ2Etd95o="></script>
+    nonce="LBpdCB978kGwSXW2Iqb8sgXuzFzbx1WS484qerhfjlM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1099957/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1099957/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
