--- a/VRChat/54/1126754.html
+++ b/VRChat/54/1126754.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uBdC9fe5KXJXQAhUMDR7QrWmoKekxLurbda8kfRV3to="></script>
+    "IwP5vezyywZazg2oAZcDEPd6nOx6XX5SX1lBltdYTko="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ゴリアテちゃんお座りキーホルダー","description":"VRchatやバーチャルキャストで活躍中のGoliath dollさん（http://3d.nicovideo.jp/works/td33709）を描いたアクリルキーホルダーが初登場！\npixivFACTORY製です。\n\n","url":"https://booth.pm/ja/items/1126754","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1090"},"image":"https://booth.pximg.net/c/620x620/328d82fd-53bb-4d2d-b005-317d4c5b943a/i/1126754/585c54fd-102a-4c2e-b43a-f91a3bcd0283_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uBdC9fe5KXJXQAhUMDR7QrWmoKekxLurbda8kfRV3to="></script>
+    nonce="IwP5vezyywZazg2oAZcDEPd6nOx6XX5SX1lBltdYTko="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1126754/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1126754/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -355,7 +356,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
