--- a/VRChat/05/1126405.html
+++ b/VRChat/05/1126405.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RhjXnSIe9tEi+7bj35Mr+d4W1kTP28ZbZ2gm+H3LqcM="></script>
+    "iSOyOSBdH7OAfCJizeLm75iyH6w44yaRFFa8evhUt+s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC Slav入門セット","description":"#スラブ古文書\n\n若「VRC用のスラブアニメーション面倒っす\n心「面倒なら拾ってくるがよい\n若「やや、どこにあるんですか老師\n心「ねっとり闇市に今すぐ行け\n\n若＆心「「Cheeki breeki！！！！」」\n\n\n・エモート用のアニメーション3点セット\n・slav_10s(スラブスクワット10秒)\n・slav_sit(CustomSittingのIDLEに入れると椅子にスラブスクワットします。微調整はRootTransformPositionのYをいじってね)\n・slav_屈伸(なんかリズミカルに屈伸する)\n\n※もちろんAlcedoちゃんは入ってません※\n\n---利用規約---\n\n・個人利用、ゲーム等への利用を許可致します。\n\n・再配布は禁止と致します。\n\n・動画配信、映像制作等への利用は許可致します。\n\n・本データを利用したことによって生じた損害に対して当方は一切責任を負いませんので、利用は自己責任でお願い致します。\n\n","url":"https://booth.pm/ja/items/1126405","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2063f3e3-3355-4414-b3b5-dbe9ce6247dc/i/1126405/449abfe4-06d2-4ba2-ac38-d30d72fb54dd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RhjXnSIe9tEi+7bj35Mr+d4W1kTP28ZbZ2gm+H3LqcM="></script>
+    nonce="iSOyOSBdH7OAfCJizeLm75iyH6w44yaRFFa8evhUt+s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1126405/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               366
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1126405/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               366
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
