--- a/VRChat/28/1124528.html
+++ b/VRChat/28/1124528.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rl5WFaoOTQVpRU0LlJoIO0TX25K642pUpBo6UPjfogc="></script>
+    "NCn4B/Lm8YbOk87u8bSK9M0TqxFVrHiPU5iOBlkCk24="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"剣道用具3点セット","description":"VRC向けの３D剣道モデルセットです。\n\nアバターに装備して剣道少女を作りましょう！！　あるいは熱血教師に持たせるのもあり！！\n\n\n・竹刀（△1498）\n・竹刀袋（△744）\n・防具袋（△794）\n\nが揃っています。\n\n【VRchat向け「剣道セット」モデルデータver2.0】\n2018/12/03\n\n\n●３Dモデル「剣道セット」利用規約●\n・剣道セットver2.0（以下本モデル）はVRchat用のモデルデータです。\n・本モデルを使っての商用利用（動画・画像・ゲーム等）は可能です。\n・本モデルを使っての政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n・本モデル及び改変モデルの再配布の禁止します。\n（再配布とは本モデルのモデルデータをネット上または物理的に使える状態で第三者に配布することを指します。ただし、VRchatでのペデスタル等で一時的に使えるモデルに所持させることは可能とします。）\n・商用利用する際に権利表記などは必要ありません。\n\n\n\n【付属物】\nunitypackageデータ\nFBXデータ\nテクスチャデータ（png、clip）\n\n【免責事項】\nこのデータを使用して発生したいかなる問題､損害にもシンヤは責任を持ちません。\nご使用は自己責任でお願いします。\n\n\n【モデル作成】\nシンヤ＠モデリング刀匠ねずみ\nTwitter：@ysakura3928\n\n\n【仕様メモ（2018/12/03　ver1.0）】\nシェイプキーを使って防具袋の紐を変形できます。サムネイルの用に肩にかける時などにunityだけで変形することができます。\n\n【仕様メモ（2020/11/04　ver2.0）】\nファイル命名を英語にしました。\n竹刀袋のモデルに紐を追加して、シェイプキーで有りなしを選択できるようにしました。\n","url":"https://booth.pm/ja/items/1124528","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1124528/ee8b276f-6c02-425f-9110-d92db345272a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rl5WFaoOTQVpRU0LlJoIO0TX25K642pUpBo6UPjfogc="></script>
+    nonce="NCn4B/Lm8YbOk87u8bSK9M0TqxFVrHiPU5iOBlkCk24="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1124528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1124528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
